fixing contrast

--- a/style.css
+++ b/style.css
@@ -775,11 +775,11 @@ h4 {
 }
 
 .tc-white {
-    color: #F3976C!important;
+    color: #FFFFFF!important;
 }
 
 .btn-atomic-tangerine {
-    background: #F3976C;
+    background: #201e1d;
     color: #FFFFFF!important;
 }
 
